--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,8 @@
     }
   },
   "ServiceSettings": {
-    "ServiceName": "Inventory"
+    "ServiceName": "Inventory",
+    "Authority": "https://localhost:5003"
   },
   "RabbitMQSettings": {
     "Host": "localhost"
