Dockerizing project, running and fixing minor naming issue - MD

--- a/appsettings.json
+++ b/appsettings.json
@@ -18,7 +18,7 @@
     "Port": "27017"
   },
   "ClientUrls": {
-    "CatagoryService": "https://localhost:5001"
+    "CatalogService": "https://localhost:5001"
   },
   "AllowedOrigin": "http://localhost:3000"
 }
